# iqr_ptz_robot

./: README.md
iqr_ptz_bringup/: CMakeLists.txt  package.xml
iqr_ptz_bringup/config/rules/: 40-iqr.rules
iqr_ptz_bringup/launch/: bringup.launch
iqr_ptz_bringup/launch/include/: jackal.launch.xml
iqr_ptz_description/: CMakeLists.txt  package.xml
iqr_ptz_description/launch/: view_model.launch  view_robot.launch
iqr_ptz_description/rviz/: view_model.rviz  view_robot.rviz
iqr_ptz_description/urdf/: axis_p56s.urdf.xacro  gps_antenna.xacro  iqr_ptz_robot.urdf.xacro  sensor_support.xacro
iqr_ptz_description/urdf/mesh/: axis_p56s-B.stl  axis_p56s-P.stl  axis_p56s-T.stl  gps_antenna.stl
iqr_ptz_navigation/: CMakeLists.txt  package.xml
iqr_ptz_navigation/launch/: mapping.launch  navigation.launch
iqr_ptz_navigation/maps/: 6f.yaml
iqr_ptz_navigation/rviz/: mapping.rviz  navigation.rviz
