<?xml version="1.0"?>
<package format="2">
  <name>iqr_ptz_bringup</name>
  <version>0.1.0</version>
  <description>The iqr_ptz_bringup package</description>

  <!-- Author -->
  <maintainer email="lei.yan@iquotient-robotics.com">QuartzYan</maintainer>
  
  <!-- License -->
  <license>MIT</license>

  <!-- depend -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
